--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ core/secretkey.py
 __pycache__/
 *.pyc
 .DS_Store
-data/.images
-data/.eval
-data/.test
+data/images/
+data/eval/
+data/test/
+data/groundtruth/
