--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
-# Python virtual environment
 .venv/
 .idea/
 core/secretkey.py
 __pycache__/
 *.pyc
 .DS_Store
+data/images/
+data/eval/
+data/test/
+data/groundtruth/
