--- a/PaddleOCR/configs/rec/rec_gameui.yml
+++ b/PaddleOCR/configs/rec/rec_gameui.yml
@@ -12,7 +12,7 @@ Global:
   save_inference_dir: ./inference/resnet18/
   infer_mode: False
   use_visualdl: False
-  character_dict_path: /Users/grantbiellak/PycharmProjects/CRK-AutoRoller/stat_dict.txt
+  character_dict_path: ./stat_dict.txt
   max_text_length: 70
   save_res_path: ./output/rec/predicts_resnet18.txt
 
@@ -46,7 +46,7 @@ Loss:
 
 PostProcess:
   name: CTCLabelDecode
-  character_dict_path: /Users/grantbiellak/PycharmProjects/CRK-AutoRoller/stat_dict.txt
+  character_dict_path: ./stat_dict.txt
   use_space_char: True
 
 Metric:
