--- a/PaddleOCR/configs/rec/rec_gameui.yml
+++ b/PaddleOCR/configs/rec/rec_gameui.yml
@@ -1,27 +1,27 @@
 Global:
   use_gpu: True
-  epoch_num: 200
+  epoch_num: 80
   log_smooth_window: 20
   print_batch_step: 10
-  save_model_dir: ./output/rec/resnet18_bilstm_ctc/
-  save_epoch_step: 2
+  save_model_dir: ./output/rec/svtr_ctc/
+  save_epoch_step: 5
   eval_batch_step: [0, 500]
   cal_metric_during_train: True
-  pretrained_model: 
-  checkpoints: C:\Users\gbiel\CRK-AutoRoller\PaddleOCR\output\rec\resnet18_bilstm_ctc\latest.pdparams
-  save_inference_dir: ./inference/resnet18/
+  pretrained_model: C:\Users\gbiel\CRK-AutoRoller\PaddleOCR\output\rec\svtr_ctc\best_accuracy.pdparams
+  checkpoints:
+  save_inference_dir: ./inference/svtr/
   infer_mode: False
   use_visualdl: False
-  character_dict_path: C:\Users\gbiel\CRK-AutoRoller\stat_dict.txt
-  max_text_length: 70
-  save_res_path: ./output/rec/predicts_resnet18.txt
+  character_dict_path: C:/Users/gbiel/CRK-AutoRoller/stat_dict.txt
+  max_text_length: 25
+  save_res_path: ./output/rec/predicts_svtr.txt
 
 Optimizer:
   name: Adam
   beta1: 0.9
   beta2: 0.999
   lr:
-    learning_rate: 0.0001
+    learning_rate: 0.0005
   regularizer:
     name: L2
     factor: 0
@@ -29,17 +29,19 @@ Optimizer:
 Architecture:
   model_type: rec
   algorithm: CRNN
-  Transform:
   Backbone:
-    name: ResNet
-    layers: 18
+    name: MobileNetV1Enhance
+    scale: 0.5
+    last_conv_stride: [1, 2]
+    last_pool_type: avg
   Neck:
     name: SequenceEncoder
-    encoder_type: rnn
-    hidden_size: 96
+    encoder_type: rnn  
+    hidden_size: 256
+    num_layers: 2
   Head:
     name: CTCHead
-    fc_decay: 0
+    fc_decay: 0.00001
 
 Loss:
   name: CTCLoss
@@ -60,23 +62,34 @@ Train:
     label_file_list: ["C:/Users/gbiel/CRK-AutoRoller/data/images/label.txt"]
     transforms:
       - DecodeImage:
-          img_mode: BGR
           channel_first: False
+          img_mode: BGR
       - CTCLabelEncode:
-          character_dict_path: C:\Users\gbiel\CRK-AutoRoller\stat_dict.txt
+          character_dict_path: C:/Users/gbiel/CRK-AutoRoller/stat_dict.txt
           use_space_char: True
-      - RandAugment:
-          magnitude: 1
+      - RecAug:
+          aug_ops:
+            ColorJitter:
+              brightness: 0.2
+              contrast: 0.2
+              hue: 0.1
+              saturation: 0.2
+            RandomColor: None
+          prob: 0.3
+          aug_prob: 0.8
+          padding: True
+          use_crop: False
+          use_rotate: False
       - RecResizeImg:
-          image_shape: [3, 32, 320]
+          image_shape: [3, 32, 330]
           padding: True
       - KeepKeys:
           keep_keys: ['image', 'label', 'length']
   loader:
     shuffle: True
-    batch_size_per_card: 16  # Keep low for smooth multitasking
+    batch_size_per_card: 16
     drop_last: True
-    num_workers: 0          # Avoid CPU overload
+    num_workers: 0
     use_shared_memory: False
     use_mp: False
 
@@ -90,10 +103,10 @@ Eval:
           img_mode: BGR
           channel_first: False
       - CTCLabelEncode:
-          character_dict_path: C:\Users\gbiel\CRK-AutoRoller\stat_dict.txt
+          character_dict_path: C:/Users/gbiel/CRK-AutoRoller/stat_dict.txt
           use_space_char: True
       - RecResizeImg:
-          image_shape: [3, 32, 320]
+          image_shape: [3, 32, 330]
           padding: True
       - KeepKeys:
           keep_keys: ['image', 'label', 'length']
