--- a/PaddleOCR/configs/rec/rec_gameui.yml
+++ b/PaddleOCR/configs/rec/rec_gameui.yml
@@ -7,12 +7,12 @@ Global:
   save_epoch_step: 5
   eval_batch_step: [0, 500]
   cal_metric_during_train: True
-  pretrained_model: C:\Users\gbiel\CRK-AutoRoller\PaddleOCR\output\rec\svtr_ctc\best_accuracy.pdparams
+  pretrained_model: PaddleOCR/output/rec/svtr_ctc/best_accuracy
   checkpoints:
   save_inference_dir: ./inference/svtr/
   infer_mode: False
   use_visualdl: False
-  character_dict_path: C:/Users/gbiel/CRK-AutoRoller/stat_dict.txt
+  character_dict_path: stat_dict.txt
   max_text_length: 25
   save_res_path: ./output/rec/predicts_svtr.txt
 
@@ -48,7 +48,7 @@ Loss:
 
 PostProcess:
   name: CTCLabelDecode
-  character_dict_path: C:/Users/gbiel/CRK-AutoRoller/stat_dict.txt
+  character_dict_path: stat_dict.txt
   use_space_char: True
 
 Metric:
